@startuml

title __PATTERN's Class Diagram__\n

  namespace pattern {
    class pattern.Main {
        {static} - reader : BufferedReader
        {static} - server : Server
        {static} + main()
        {static} - init()
    }
  }
  

  namespace pattern {
    abstract class pattern.Middleware {
        {abstract} + check()
        + linkWith()
        # checkNext()
    }
  }
  

  namespace pattern {
    class pattern.RoleCheckMiddleware {
        + check()
    }
  }
  

  namespace pattern {
    class pattern.Server {
        - users : Map<String, String>
        + hasEmail()
        + isValidPassword()
        + logIn()
        + register()
        + setMiddleware()
    }
  }
  

  namespace pattern {
    class pattern.ThrottlingMiddleware {
        - currentTime : long
        - request : int
        - requestPerMinute : int
        + ThrottlingMiddleware()
        + check()
    }
  }
  

  namespace pattern {
    class pattern.UserExistsMiddleware {
        + UserExistsMiddleware()
        + check()
    }
  }
  

  pattern.Middleware o-- pattern.Middleware : next
  pattern.RoleCheckMiddleware -up-|> pattern.Middleware
  pattern.Server o-- pattern.Middleware : middleware
  pattern.ThrottlingMiddleware -up-|> pattern.Middleware
  pattern.UserExistsMiddleware -up-|> pattern.Middleware
  pattern.UserExistsMiddleware o-- pattern.Server : server


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
